--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,24 @@
 *{
     font-family: 'Plus Jakarta Text', sans-serif;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    }
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background: #95a5a6;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #7f8c8d;
+}
